--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,6 +23,12 @@
     background: #4e4e4e42;
   }
 
-  
+  .fade-out {
+    transition: opacity 0.5s ease-out;
+    opacity: 0;
+  }
+  .fade-in {
+    opacity: 1;
+  }
   
 }
